--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,25 @@
   position: relative;
   bottom: 1px;
 }
+.ce-chat-title-text,
+.ce-chat-subtitle-text {
+  color: #002766 !important;
+}
+.ce-their-message-bubble {
+  background-color: rgba(220, 220, 220) !important;
+}
+.ce-user-typing-text,
+.ce-message-timestamp {
+  color: #002766 !important;
+}
+.ce-my-message-bubble {
+  background-color: #002766 !important;
+  color: white;
+  margin-right: 1vw;
+}
+#ce-send-message-button {
+  background-color: #002766 !important;
+}
 
 .ce-danger-button {
   background-color: white !important;
@@ -87,14 +106,13 @@
 /* Login Page */
 
 #login-page {
-  background-image: linear-gradient(#40a9ff, #096dd9);
+  background-image: linear-gradient(#096dd9, #002766);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
 }
-
 #login-card {
   padding-top: 20px;
   padding-bottom: 36px;
@@ -139,10 +157,10 @@
 }
 @media (max-width: 768px) {
   #login-card {
-    width: 90vw;
+    width: 95vw;
   }
 
   .login-button {
-    width: 70%;
+    width: 80%;
   }
 }
