--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 /* Global */
 
 * {
-  font-family: Avenir, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial,
-    Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -125,18 +124,18 @@
 .login-button {
   cursor: pointer;
   color: white;
+  font-size: 1.4rem;
   padding: 12px;
-  border-radius: 8px;
+  border-radius: 12px;
   display: inline-block;
-  width: 50%;
+  width: 70%;
 }
-
-.facebook {
-  background-color: #3b5998;
+.login-button:hover {
+  background-color: #0042ac;
 }
 
 .google {
-  background-color: #4285f4;
+  background-color: #045ae4;
   color: white;
 }
 
