--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,9 @@
 .ce-chats-container {
   background-color: #ffffff !important;
 }
+.ce-feed-container {
+  background-color: black !important;
+}
 .ce-primary-button {
   border-radius: 6px !important;
   background-color: #002766 !important;
@@ -83,7 +86,7 @@
 }
 .nav-bar {
   width: 100%;
-  height: 7vh;
+  height: 5vh;
   background-color: #002766;
   display: flex;
   justify-content: space-between;
@@ -91,7 +94,7 @@
 }
 
 .logo-tab {
-  font-size: 32px;
+  font-size: 1.6rem;
   font-weight: 700;
   color: white;
   margin-left: 2%;
@@ -107,7 +110,164 @@
   width: 0; /* Remove scrollbar space */
   background: transparent; /* Optional: just make scrollbar invisible */
 }
+/*Chat Feed*/
+.chat-feed {
+  height: 95vh;
+  width: 100%;
+  overflow: scroll;
+  background-color: rgb(240, 240, 240);
+}
 
+.chat-title-container {
+  width: 100%;
+  padding: 5% 0%;
+  text-align: center;
+}
+
+.chat-title {
+  color: #2f54eb;
+  font-weight: 800;
+  font-size: 24px;
+}
+
+.chat-subtitle {
+  color: #2f54eb;
+  font-weight: 600;
+  font-size: 12px;
+  padding-top: 4px;
+}
+
+.message-row {
+  float: left;
+  width: 100%;
+  display: flex;
+  margin-left: 0px;
+}
+
+.message-block {
+  width: 100%;
+  display: inline-block;
+}
+
+.message-avatar {
+  width: 30px;
+  height: 30px;
+  border-radius: 30px;
+  color: white;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 30px;
+}
+
+.message {
+  padding: 8px;
+  font-size: 1rem;
+  border-radius: 6px;
+  max-width: 60%;
+  height: fit-content;
+  word-break: break-word;
+}
+
+.message-image {
+  margin-right: 0px;
+  object-fit: cover;
+  border-radius: 6px;
+  height: 30vw;
+  /* width: 30vw; */
+  max-height: 200px;
+  max-width: 200px;
+  min-height: 100px;
+  min-width: 100px;
+}
+
+.read-receipts {
+  position: relative;
+  bottom: 6px;
+}
+
+.read-receipt {
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+  margin: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+}
+/*Message Form*/
+.message-form-container {
+  position: fixed;
+  background-color: rgba(230, 230, 230);
+  bottom: 0;
+  height: 8vh;
+  width: 50vw;
+  padding: 0;
+}
+
+.messages-container {
+  width: 95% !important;
+  padding: 0 !important;
+  margin-top: 15vh;
+}
+
+.message-form {
+  overflow: hidden;
+  border: 2px solid rgba(128, 128, 128, 0.733);
+  border-radius: 10px;
+}
+
+.message-input {
+  width: calc(100% - 100px);
+  border: 1px solid white;
+  padding: 0px 10px;
+  outline: none;
+  font-size: 1.1rem;
+  display: inline-block;
+  min-width: 30vw;
+  max-width: 80vw;
+}
+
+.image-button {
+  cursor: pointer;
+  padding: 0px 10px;
+  height: 100%;
+  border: none;
+  outline: none;
+  background-color: #ffffff;
+  color: #000000;
+}
+.image-button:active {
+  outline: none !important;
+}
+
+.send-button {
+  height: 42px;
+  border: none !important;
+  padding: 0px 5px;
+  cursor: pointer;
+  outline: none;
+  background-color: #ffffff;
+  color: #002766;
+}
+.send-button:active {
+  outline: none !important;
+}
+
+.send-icon,
+.camera-icon,
+.picture-icon {
+  top: 1px;
+  font-size: 1.4rem;
+  position: relative;
+  outline: none;
+}
+
+.send-icon:active,
+.camera-icon:active,
+.picture-icon:active {
+  outline: none;
+}
 /* Login Page */
 
 #login-page {
@@ -187,10 +347,26 @@
   .login-button {
     width: 85%;
   }
+  #login-card {
+    margin-bottom: 5vh;
+  }
+  .message-form {
+    width: 100%;
+    padding: 0px 2px;
+  }
+  .button {
+    margin-bottom: 15vh;
+  }
+  .message-form-container {
+    position: fixed;
+    bottom: 0;
+    height: 8vh;
+    width: 100vw;
+    padding: 0;
+    background-color: #ffffff;
+  }
 }
-#login-card {
-  margin-bottom: 5vh;
-}
+
 @media (max-width: 348px) {
   #login-card {
     width: 95vw;
